# groq-o-clock-personal-python-chatbot-project

./: .env.example  .gitignore  .gitmodules  PYPI_PUBLISHING.md  PYPI_UPLOAD.sh  README.md  TRUSTED_PUBLISHERS_SETUP.md  chat.py  demo.tape  publish_to_pypi.sh  pyproject.toml  requirements.txt
.github/workflows/: doctest.yml  flake8.yml  integration-test.yml  publish-pypi.yml  publish.yml
scripts/: record_demo.sh
test_projects/: README.md
tests/: conftest.py  run_doctests.py  test_chat_features.py  test_integration.py  test_write_tools.py
tools/: __init__.py  calculate.py  cat.py  compact.py  diff_utils.py  doctests.path  doctests.py  grep.py  load_image.py  ls.py  path_safety.py  pip_install.py  rm(path)  rm.py  write_file(path, contents, commit_message)  write_file.py  write_files(files, commit_message)  write_files.py
