[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groq-o-clock"
version = "0.2.0"
description = "A terminal assistant for chatting with local documents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "groq",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "flake8",
    "pytest",
    "build",
    "twine",
]

[project.scripts]
chat = "chat:main"

[tool.setuptools]
py-modules = ["chat"]
packages = ["tools"]
